--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/form-data": "^2.5.0",
     "@types/jest": "^29.2.4",
     "@types/knex": "^0.16.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.13",
     "@types/node-schedule": "^2.1.0",
     "@types/string-template": "^1.0.2",
@@ -87,6 +88,7 @@
     "axios": "^1.2.1",
     "cors": "^2.8.5",
     "cpf-cnpj-validator": "^1.0.3",
+    "cron-validator": "^1.3.1",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "elastic-apm-node": "^3.40.1",
@@ -96,6 +98,7 @@
     "knex": "^2.3.0",
     "mongodb": "^4.12.1",
     "mongoose": "^6.8.0",
+    "multer": "^1.4.5-lts.1",
     "node-schedule": "^2.1.0",
     "reflect-metadata": "^0.1.13",
     "string-template": "^1.0.0",
