--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "axios": "^1.2.1",
     "cors": "^2.8.5",
     "cpf-cnpj-validator": "^1.0.3",
+    "cron-parser": "^4.7.1",
     "cron-validator": "^1.3.1",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
